# controllers/auth.js
@@ -10,46 +10,74 @@ var email_config = require('../config/email')
 var sendEmail = require('../utils/email')
 var util = require('../utils/util')
 var redis = require('../utils/redis')
-var _ = require('lodash')
-
+var utils_ctrl = require('../controllers/utils')
 var Auth = require('../models/auth')
 var StringToken = require('../models/stringtoken')
 var push = require('../utils/socketio-push')
+var _ = require('lodash')
+
 /**
  * 使用用户邮箱和密码登录
 	 */
 exports.signInWithEmailAndPassword = function (req, res) {
-	var email = req.body.email
-	var password = req.body.password
+	let email = req.body.email
+	let password = req.body.password
 	//邮箱地址或密码不能为空
-	if (!email || !password) return res.api_error( { code: code.getErrorCode_name('auth_emailpass_null'), msg: code.getErrorMessage_name('auth_emailpass_null') })
+	if (!email || !password) return res.api_error({ code: code.getErrorCode_name('auth_emailpass_null'), msg: code.getErrorMessage_name('auth_emailpass_null') })
 	//验证码验证,以后添加
 	if (!_.isEqual(_.toUpper(req.body.captcha), _.toUpper(req.session.captcha))) {
 		//请正确输入验证码
-		return res.api_error( { code: code.getErrorCode_name('auth_captcha_err'), msg: code.getErrorMessage_name('auth_captcha_err') })
+		return res.api_error({ code: code.getErrorCode_name('auth_captcha_err'), msg: code.getErrorMessage_name('auth_captcha_err') })
 	}
 
 	Auth.getAuthenticated(email, password).then(doc => {
 		if (doc == 0) {
-			return res.api_error( { code: code.getErrorCode_name('auth_user_noexist'), msg: code.getErrorMessage_name('auth_user_noexist') })//用户不存在或邮箱地址不正确
+			return res.api_error({ code: code.getErrorCode_name('auth_user_noexist'), msg: code.getErrorMessage_name('auth_user_noexist') })//用户不存在或邮箱地址不正确
 		}
 		if (doc == 1) {
-			return res.api_error( { code: code.getErrorCode_name('auth_emailpass_null'), msg: code.getErrorMessage_name('auth_emailpass_error') })//邮箱或密码错误
+			return res.api_error({ code: code.getErrorCode_name('auth_emailpass_null'), msg: code.getErrorMessage_name('auth_emailpass_error') })//邮箱或密码错误
 		}
 		if (doc == 2) {
-			return res.api_error( { code: code.getErrorCode_name('auth_name_islucked'), msg: code.getErrorMessage_name('auth_name_islucked') })//账号已被锁定，请稍后重新尝试
+			return res.api_error({ code: code.getErrorCode_name('auth_name_islucked'), msg: code.getErrorMessage_name('auth_name_islucked') })//账号已被锁定，请稍后重新尝试
 		}
 		if (doc == 3) {
-			return res.api_error( { code: code.getErrorCode_name('auth_email_activate_not'), msg: code.getErrorMessage_name('auth_email_activate_not') })//用户尚未邮件激活，请激活后重新尝试
+			return res.api_error({ code: code.getErrorCode_name('auth_email_activate_not'), msg: code.getErrorMessage_name('auth_email_activate_not') })//用户尚未邮件激活，请激活后重新尝试
 		}
-		var token = tokenUtil.generateToken(doc._id)
-		redis.redisClient.set('tokenid:'+token,doc._id.toString())
-		redis.redisClient.expire('tokenid:'+token, config.TOKEN_EXPIRATION)
-		util.setSessionUserInfo(req,doc)
+		let token = tokenUtil.generateToken(doc._id)
+		redis.redisClient.set('tokenid:' + token, doc._id.toString())
+		redis.redisClient.expire('tokenid:' + token, config.TOKEN_EXPIRATION)
+		util.setSessionUserInfo(req, doc)
 		// res.cookie('token', token)
 		return res.api({ token: token, user: doc }, { code: 0, msg: '交易成功' })
 	}).catch(err => {
-		return res.api_error( { code: 99999, msg: err.message })
+		return res.api_error({ code: 99999, msg: err.message })
+	})
+}
+/**
+ * 使用手机号码快速登录
+	 */
+exports.signInWithPhone = async function (req, res) {
+	let phone = req.body.phone//手机号
+	let verification = req.body.verification//验证码
+	//判断输入参数
+	if (!phone) return res.api_error({ code: code.getErrorCode_name('auth_phone_null'), msg: code.getErrorMessage_name('auth_phone_null') })
+	if (!verification) return res.api_error({ code: code.getErrorCode_name('auth_verification_null'), msg: code.getErrorMessage_name('auth_verification_null') })
+	//校验短信验证码
+	let isvalid = await utils_ctrl.smsValid(req)
+	if (!isvalid) return res.api_error({ code: code.getErrorCode_name('auth_verification_err'), msg: code.getErrorMessage_name('auth_verification_err') })
+	Auth.findOneAsync({ phone: phone },'-password -__v').then(doc => {
+		if (doc) {
+			//存在
+			let token = tokenUtil.generateToken(doc._id)
+			redis.redisClient.set('tokenid:' + token, doc._id.toString())
+			redis.redisClient.expire('tokenid:' + token, config.TOKEN_EXPIRATION)
+			util.setSessionUserInfo(req, doc)
+			return res.api({ token: token, user: doc }, { code: 0, msg: '交易成功' })
+		} else {
+			return res.api_error({ code: code.getErrorCode_name('auth_phone_noexist'), msg: code.getErrorMessage_name('auth_phone_noexist') })
+		}
+	}).catch(err => {
+		return res.api_error({ code: 99999, msg: err.message })
 	})
 }
 
@@ -59,24 +87,24 @@ exports.signInWithEmailAndPassword = function (req, res) {
 exports.signOut = function (req, res) {
 	try {
 		if (req.user) {
-			var userid = req.session.user._id
+			let userid = req.session.user._id
 			//当前采用订阅模式获取的客户端io,无法删除客户端句柄和主动断开
 			//向客户端发送空对象由客户端主动断开
-			push.pushMsgToSingleDevice(req.session.user._id.toString(),'user','')
-			var token = tokenUtil.getToken(req)
-			redis.redisClient.del('tokenid:'+token, function (err, reply) { 
-				console.log('删除redis中token数据['+reply+']：');// 删除成功，返回1，否则返回0(对于不存在的键进行删除操作，同样返回0) 
-			}); 
+			push.pushMsgToSingleDevice(req.session.user._id.toString(), 'user', '')
+			let token = tokenUtil.getToken(req)
+			redis.redisClient.del('tokenid:' + token, function (err, reply) {
+				console.log('删除redis中token数据[' + reply + ']：');// 删除成功，返回1，否则返回0(对于不存在的键进行删除操作，同样返回0) 
+			});
 
 
 			req.session.destroy()
 			delete req.user
 			return res.api(null, { code: 0, msg: '退出成功' })
 		} else {
-			return res.api_error( { code: -1, msg: '退出失败' })
+			return res.api_error({ code: -1, msg: '退出失败' })
 		}
 	} catch (err) {
-		return res.api_error( { code: 99999, msg: err.message })
+		return res.api_error({ code: 99999, msg: err.message })
 	}
 
 }
@@ -95,7 +123,7 @@ exports.initSuperAdmin = function (req, res) {
 				password: md5(password),
 			})
 		}).catch(err => {
-			return res.api_error( { code: 99999, msg: err.message })
+			return res.api_error({ code: 99999, msg: err.message })
 		})
 }
 /**
@@ -114,15 +142,15 @@ exports.initSuperAdmin = function (req, res) {
  *     }
  */
 exports.createUserWithEmailAndPassword = function (req, res) {
-	var email = req.body.email
-	var password = req.body.password
-	var displayName = req.body.displayName
+	let email = req.body.email
+	let password = req.body.password
+	let displayName = req.body.displayName
 	//邮箱地址或密码不能为空
-	if (!email || !password) return res.api_error( { code: code.getErrorCode_name('auth_emailpass_null'), msg: code.getErrorMessage_name('auth_emailpass_null') })
+	if (!email || !password) return res.api_error({ code: code.getErrorCode_name('auth_emailpass_null'), msg: code.getErrorMessage_name('auth_emailpass_null') })
 	//验证码验证,以后添加
 	if (!_.isEqual(_.toUpper(req.body.captcha), _.toUpper(req.session.captcha))) {
 		//请正确输入验证码
-		return res.api_error( { code: code.getErrorCode_name('auth_captcha_err'), msg: code.getErrorMessage_name('auth_captcha_err') })
+		return res.api_error({ code: code.getErrorCode_name('auth_captcha_err'), msg: code.getErrorMessage_name('auth_captcha_err') })
 	}
 	Auth.findOneAsync({ email: email }).then(doc => {
 		if (!doc) {
@@ -140,14 +168,14 @@ exports.createUserWithEmailAndPassword = function (req, res) {
 					//2、生成stringtoken
 					generateStringToken(email).then(stringtoken => {
 						//3、发送激活邮件
-						var message = util.clone(email_config.sign_message)
+						let message = util.clone(email_config.sign_message)
 						message.to = email
 						message.html = message.html.replaceAll('${a}', stringtoken)
 						sendEmail(message)
 						return res.api(null, { code: 0, msg: '注册成功，激活链接已经发送到您的邮箱' })
 					})
 				}).catch(err => {
-					return res.api_error( { code: 99999, msg: err.message }) 
+					return res.api_error({ code: 99999, msg: err.message })
 				})
 
 			} else {
@@ -157,14 +185,14 @@ exports.createUserWithEmailAndPassword = function (req, res) {
 					email: email,
 					password: md5(password)
 				}).save();
-				return res.api(null,  { code: 0, msg: '注册成功' })
+				return res.api(null, { code: 0, msg: '注册成功' })
 			}
 		} else {
 			//用户名已存在
-			return res.api_error( { code: code.getErrorCode_name('auth_name_exist'), msg: code.getErrorMessage_name('auth_name_exist') })
+			return res.api_error({ code: code.getErrorCode_name('auth_name_exist'), msg: code.getErrorMessage_name('auth_name_exist') })
 		}
 	}).catch(err => {
-		return res.api_error( { code: 99999, msg: err.message })
+		return res.api_error({ code: 99999, msg: err.message })
 	})
 }
 
@@ -173,26 +201,26 @@ exports.createUserWithEmailAndPassword = function (req, res) {
  * @param email
  */
 exports.sendPasswordResetEmail = function (req, res) {
-	var email = req.body.email
-	if (!email) return res.api_error( { code: code.getErrorCode_name('auth_email_null'), msg: code.getErrorMessage_name('auth_email_null') })//邮箱地址不能为空
+	let email = req.body.email
+	if (!email) return res.api_error({ code: code.getErrorCode_name('auth_email_null'), msg: code.getErrorMessage_name('auth_email_null') })//邮箱地址不能为空
 
 	Auth.findOneAsync({ email: email }).then(doc => {
 		if (doc) {
 			//2、生成stringtoken
 			generateStringToken(email).then(stringtoken => {
 				//3、发送激活邮件
-				var message = util.clone(email_config.resetpass_message)
+				let message = util.clone(email_config.resetpass_message)
 				message.to = email
 				message.html = message.html.replaceAll('${a}', stringtoken)
 				sendEmail(message)
-				return res.api(null,  { code: 0, msg: '发送成功，重置密码链接已经发送到您的邮箱' })
+				return res.api(null, { code: 0, msg: '发送成功，重置密码链接已经发送到您的邮箱' })
 			})
 		} else {
 			//用户名已存在
-			return res.api_error( { code: code.getErrorCode_name('auth_user_noexist'), msg: code.getErrorMessage_name('auth_user_noexist') })//用户不存在或邮箱地址不正确
+			return res.api_error({ code: code.getErrorCode_name('auth_user_noexist'), msg: code.getErrorMessage_name('auth_user_noexist') })//用户不存在或邮箱地址不正确
 		}
 	}).catch(err => {
-		return res.api_error( { code: 99999, msg: err.message })
+		return res.api_error({ code: 99999, msg: err.message })
 	})
 }
 /**
@@ -210,14 +238,14 @@ exports.sendPasswordResetEmail = function (req, res) {
  *     }
  */
 exports.resendStringTokenByEmail = function (req, res) {
-	var email = req.body.email
-	var type = req.body.type
+	let email = req.body.email
+	let type = req.body.type
 	//邮箱地址不能为空
-	if (!email) return res.api_error( { code: code.getErrorCode_name('auth_email_null'), msg: code.getErrorMessage_name('auth_email_null') })
+	if (!email) return res.api_error({ code: code.getErrorCode_name('auth_email_null'), msg: code.getErrorMessage_name('auth_email_null') })
 	//生成stringtoken
 	generateStringToken(email).then(stringtoken => {
 		//3、发送激活邮件
-		var message = ''
+		let message = ''
 		if (type == 'sign') message = util.clone(email_config.sign_message)
 		if (type == 'resetpass') message = util.clone(email_config.resetpass_message)
 		message.to = email
@@ -225,7 +253,7 @@ exports.resendStringTokenByEmail = function (req, res) {
 		sendEmail(message)
 		return res.api(null, { code: 0, msg: '激活链接已经重新发送到您的邮箱' })
 	}).catch(err => {
-		return res.api_error( { code: 99999, msg: err.message })
+		return res.api_error({ code: 99999, msg: err.message })
 	})
 }
 /**
@@ -244,7 +272,7 @@ function generateStringToken(email) {
 						stringtoken: randToken(20),
 						email: email
 					}
-					var newstringtoken = new StringToken(save)
+					let newstringtoken = new StringToken(save)
 					newstringtoken.save().then(() => {
 						resolve(save.stringtoken)
 					})
@@ -261,7 +289,7 @@ function generateStringToken(email) {
 						email: email
 					}
 					StringToken.findOneAndUpdateAsync(find, updates).then(() => {
-						resolve(updates.$set.stringtoken) 
+						resolve(updates.$set.stringtoken)
 					})
 				}
 			}).catch(err => {
@@ -271,16 +299,16 @@ function generateStringToken(email) {
 }
 
 exports.refreshToken = function (req, res) {
-	var oldToken = tokenUtil.getToken(req)
-    if (oldToken && tokenUtil.verifyToken(oldToken)) {
-		var newTokent = tokenUtil.refreshToken(oldToken)
-        redis.redisClient.set('tokenid:'+token,req.user._id)
-		redis.redisClient.expire('tokenid:'+token, config.TOKEN_EXPIRATION_SEC)
-    }
+	let oldToken = tokenUtil.getToken(req)
+	if (oldToken && tokenUtil.verifyToken(oldToken)) {
+		let newTokent = tokenUtil.refreshToken(oldToken)
+		redis.redisClient.set('tokenid:' + token, req.user._id)
+		redis.redisClient.expire('tokenid:' + token, config.TOKEN_EXPIRATION_SEC)
+	}
 	return res.api(newTokent, { code: 0, msg: 'ok' })
 }
 
 exports.test = function (req, res) {
-	return res.api_error( { code: 0, msg: 'ok' })
+	return res.api_error({ code: 0, msg: 'ok' })
 }
 
